Create ChainInfo repo getter Added FinalizedBlock listener Fixed some e2e tests